refactor: simplify user service methods and improve consistency in friend request handling